.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <description>Reason for triggering an automated adjustment on this timesheet. This reason will also be automatically applied to any related reversal pay transactions as part of the automated adjustment process.</description>
    <inlineHelpText>Reason for triggering an automated adjustment on this timesheet. This reason will also be automatically applied to any related reversal pay transactions as part of the automated adjustment process.</inlineHelpText>
    <label>Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Credit_Reason_Picklists</valueSetName>
    </valueSet>
</CustomField>