.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/Adjustment_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates a WFM Shift update has been passed through to the Timesheet Entries and this timesheet requires a manual review / adjustment if deemed necessary</inlineHelpText>
    <label>Adjustment Review Required</label>
    <type>Checkbox</type>
</CustomField>