.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/agx_Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>agx_Assignment_Type__c</fullName>
    <description>Assignment Record Type</description>
    <formula>tc9_et__Assignment__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Assignment Record Type</inlineHelpText>
    <label>Assignment Type</label>
    <type>Text</type>
</CustomField>