.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/agx_Payroll_Tax_Location__c.field-meta.xml
<CustomField>
    <fullName>agx_Payroll_Tax_Location__c</fullName>
    <formula>tc9_et__Payee__r.tc9_pr__Primary_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payroll Tax Location</label>
    <type>Text</type>
</CustomField>