.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/Cross_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Cross_Assignment_Status__c</fullName>
    <description>Current status of the cross-assignment interpretation process.</description>
    <inlineHelpText>Current status of the cross-assignment interpretation process.</inlineHelpText>
    <label>Cross Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Insert</fullName>
            </value>
            <value>
                <fullName>Pending Delete</fullName>
            </value>
            <value>
                <fullName>Insert Failed</fullName>
            </value>
            <value>
                <fullName>Delete Failed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>