.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/Date_Last_Adjustment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Adjustment_Sent__c</fullName>
    <inlineHelpText>Date/Time the most recent WFM Shift adjustments has been sent through to the timesheet</inlineHelpText>
    <label>Date Last Adjustment Sent</label>
    <type>DateTime</type>
</CustomField>