.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/Employee_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Employee_Mobile__c</fullName>
    <formula>tc9_et__Employee__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Mobile</label>
    <type>Text</type>
</CustomField>