.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/Minimum_Engagement_Flag__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Engagement_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Timesheet Entry has been flagged as Minimum Engagement.</inlineHelpText>
    <label>Minimum Engagement Flag</label>
    <type>Checkbox</type>
</CustomField>