.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/Primary_Approver_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver_ID__c</fullName>
    <formula>CASESAFEID(tc9_et__Assignment__r.tc9_et__Timesheet_Approver__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Approver ID</label>
    <type>Text</type>
</CustomField>