.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/ScheduledJobProcessed__c.field-meta.xml
<CustomField>
    <fullName>ScheduledJobProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ScheduledJobProcessed</label>
    <type>Checkbox</type>
</CustomField>