.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>IF(tc9_et__Start_Date__c&lt;tc9_et__Assignment__r.tc9_pr__Assignment_Start_Date__c, tc9_et__Assignment__r.tc9_pr__Assignment_Start_Date__c, tc9_et__Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>