.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/TOIL_Created__c.field-meta.xml
<CustomField>
    <fullName>TOIL_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that there were TSE with TOIL selected and thus a TOIL credit has been created in place of the OT</inlineHelpText>
    <label>TOIL Created</label>
    <type>Checkbox</type>
</CustomField>