.vscode/allianceuat_compare/force-app/main/default/objects/tc9_et__Timesheet__c/fields/TOIL_Error__c.field-meta.xml
<CustomField>
    <fullName>TOIL_Error__c</fullName>
    <label>TOIL Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>